# gtkplot2

./: .gitignore  Makefile.am  configure.ac
include/gtkplot2/: graph.h
src/: graph.c  graph_int.h  gtkplot.h  plot2.c  sample.c
