AC_INIT([gtkplot2], [0.1], [ext@sidvind.com])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([-Wall foreign])
AM_SILENT_RULES([yes])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])

AC_GNU_SOURCE
LT_INIT
AC_PROG_CC_C_O
AC_PROG_CC_C99

PKG_CHECK_MODULES([gtk], [gtk+-2.0])

AC_OUTPUT
